testsuite/tests/parser/should_fail/T19923a.stderr

T19923a.hs:1:14: error: [GHC-46537] Unsupported extension: T19923
